--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -10,10 +10,28 @@
     text-align: center;
     text-transform: uppercase;
     color: #FFFFFF;
+    transition: 0.3s;
+    &:hover {
+        box-shadow: 3px 3px 10px rgba(255, 255, 255, .6);
+        background-color: #b80606;
+    }
     &_main{
         margin-top: 67px;
         width: 300px;
         height: 50px;
         font-size: 16px;
+    }
+    &_submit {
+        width: 303px;
+        height: 58px;
+        font-size: 16px;
+    }
+    &_mini {
+        width: 135px;
+        height: 44px;
+        font-size: 14px;
+        &:hover {
+            box-shadow: 3px 3px 10px rgba(13, 13, 13, .6);
+        } 
     }
 }
