--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -1,4 +1,7 @@
 @media (max-width: 1200px) {
+    .container {
+        max-width: 950px;
+    }
     .header {
         &__logo {
             width: 230px;
@@ -13,11 +16,88 @@
             font-size: 16px;
         }
     } 
+    .promo {
+        &__header {
+            font-size: 40px;
+        }
+        &__subheader {
+            font-size: 22px;
+        }
+        &__icons {
+            width: 400px;
+        }
+    }
+    .title {
+        font-size: 28px;
+        &_left {
+            font-size: 32px;
+        }
+    }
+    .carousel {
+        padding: 60px;
+        &__inner {
+            width: 700px;
+        }
+    }
+    .catalog {
+        &__tab {
+            width: 210px;
+            height: 50px;
+        }
+    }
+    .consultation {
+        padding: 80px 0;
+        min-height: 645px;
+        &__descr {
+            font-size: 18px;
+        }
+        input.error {
+            margin-bottom: 10px;
+        }
+        label.error{
+            font-size: 16px;
+            margin-bottom: 10px;
+        }
+    }
+    .footer {
+        height: 520px;
+        iframe {
+            height: 520px;
+        }
+        &__adr {
+            font-size: 18px;
+            margin-bottom: 30px;
+        }
+        &__phone {
+            font-size: 18px;
+            margin-bottom: 30px;
+        }
+        &__info {
+            padding: 40px 0;
+            height: 227px;
+        }
+        &__social-item {
+            height: 48px;
+            width: 48px;
+            img {
+                height: 23px;
+            }
+        }
+    }
+    .modal {
+        input.error {
+            margin-bottom: 10px;
+        }
+        label.error{
+            font-size: 16px;
+            margin-bottom: 10px;
+        }
+    }
 }
 
 @media (max-width: 992px) {
     .container {
-        max-width: 765px;
+        max-width: 740px;
     }
     .header {
         &__logo {
@@ -34,8 +114,18 @@
             height: 45px;
             font-size: 13px;
         }
+        &_submit {
+            width: 260px;
+            height: 50px;
+            font-size: 14px;
+        }
     }
     .promo {
+        min-height: 600px;
+        padding-bottom: 70px;
+        &__wrapper {
+            margin-top: 75px;
+        }
         &__header {
             font-size: 38px;
         }
@@ -54,26 +144,134 @@
         }
     }
     .advantages {
-        min-height: 420px;
+        min-height: 400px;
+        padding: 55px 0;
         &__title {
             font-size: 25px;
         }
         &__wrapper {
+            margin-top: 35px;
+        }
+        &__item {
+            width: 30%;
+        }
+        &__subtitle {
+            font-size: 15px;
+        }
+        &__descr {
+            margin-top: 10px;
+            font-size: 11px;
+        }
+    }
+    .title {
+        font-size: 26px;
+        &_left {
+            font-size: 30px;
+        }
+    }
+    .consultation {
+        padding: 45px 0 55px 0;
+        min-height: 565px;
+        &__descr {
+            font-size: 16px;
+        }
+        label.error{
+            font-size: 16px;
+        }
+    }
+    .feed-form {
+        margin-top: 25px;
+    }
+    .carousel {
+        padding: 45px;
+        &__inner {
+            width: 635px;
+        }
+        .slick-prev, .slick-next {
+            height: 48px;
+            width: 30px;
+            left: -50px;
+        }
+        .slick-next {
+            right: -50px;
+            left: auto;
+        }
+    }
+    .catalog {
+        padding-bottom: 40px;
+        &__tabs {
+            margin-top: 35px;
+        }
+        &__tab {
+            width: 190px;
+            height: 48px;
+            line-height: 45px;
+            font-size: 16px;
+        }
+        &__content {
+            margin-top: 40px;
+            justify-content: space-around;
+        }
+        &-item {
+            margin-right: 0;
+        }
+    }
+    .reviews {
+        padding-bottom: 35px;
+        &__item {
             margin-top: 45px;
+        }
+        &__img {
+            height: 150px;
+            width: 150px;
         }
         &__subtitle {
             font-size: 16px;
         }
+        &__text {
+            margin-left: 30px;
+            padding-right: 0;
+        }
         &__descr {
-            margin-top: 15px;
-            font-size: 12px;
+            font-size: 14px;
+        }
+    }
+    .footer {
+        height: 430px;
+        iframe {
+            height: 430px;
+        }
+        &__info {
+            padding: 25px 0 35px 0;
+            width: 430px;
+            height: 172px;
+        }
+        &__adr {
+            font-size: 16px;
+            margin-bottom: 20px;
+        }
+        &__phone {
+            font-size: 16px;
+            margin-bottom: 20px;
+        }
+        &__social-item {
+            width: 43px;
+            height: 43px;
+            img {
+                height: 19px;
+            }
+        }
+    }
+    .modal {
+        label.error{
+            font-size: 16px;
         }
     }
 }
 
 @media (max-width: 768px) {
     .container {
-        max-width: 565px;
+        max-width: 550px;
     }
     .header {
         &__logo {
@@ -99,6 +297,16 @@
             height: 40px;
             font-size: 12px;
         }
+        &_submit {
+            width: 260px;
+            height: 45px;
+            font-size: 13px;
+        }
+        &_mini {
+            width: 95px;
+            height: 30px;
+            font-size: 11px;
+        }
     }
     .promo {
         min-height: 500px;
@@ -107,11 +315,11 @@
             margin-top: 65px;
         }
         &__header {
-            font-size: 30px;
+            font-size: 34px;
         }
         &__subheader {
             margin-top: 5px;
-            font-size: 15px;
+            font-size: 17px;
         }
         &__icons {
             margin-top: 30px;
@@ -127,6 +335,9 @@
     }
     .advantages {
         padding: 45px 0;
+        &__subtitle {
+            margin-top: 20px;
+        }
         &__wrapper {
             margin-top: 0;
             display: flex;
@@ -142,11 +353,184 @@
             font-size: 14px;
         }
     }
+    .consultation {
+        min-height: 435px;
+        padding: 30px 0;
+        &__descr {
+            text-align: center;
+            font-size: 14px;
+            br {
+                display: none;
+            }
+        }
+        label.error{
+            font-size: 14px;
+        }
+    }
+    .title {
+        font-size: 24px;
+        &_left {
+            text-align: center;
+            font-size: 22px;
+            line-height: 38px;
+            br {
+                display: none;
+            }
+        }
+    }
+    .feed-form {
+        align-items: center;
+        width: 100%;
+        input {
+            width: 320px;
+            height: 48px;
+            font-size: 12px;
+        }
+        &_mt25 {
+            margin-top: 15px;
+        }
+    }
+    .carousel {
+        padding: 30px 0;
+        &__inner {
+            width: 440px;
+        }
+        .slick-prev, .slick-next {
+            height: 44px;
+            width: 27px;
+            left: -40px;
+        }
+        .slick-next {
+            right: -40px;
+            left: auto;
+        }
+    }
+    .catalog {
+        padding-bottom: 30px;
+        &__tabs {
+            margin-top: 30px;
+        }
+        &__tab {
+            width: 160px;
+            height: 43px;
+            line-height: 41px;
+            font-size: 14px;
+        }
+        &__content {
+            margin-top: 25px;
+        }
+        &-item {
+            width: 250px;
+            min-height: 400px;
+            margin-bottom: 10px;
+            padding: 15px;
+            &__img {
+                height: 170px;
+            }
+            &__subtitle {
+                font-size: 14px;
+            }
+            &__descr {
+                font-size: 12px;
+            }
+            &__link {
+                font-size: 13px;
+            }
+            &__price {
+                font-size: 17px;
+            }
+            &__old-price {
+                font-size: 12px;
+            }
+            &__wrapper {
+                width: calc(200% + 30px);
+            }
+            &__content {
+                margin-right: 0;
+                &_active {
+                    margin-right: 15px;
+                }
+            }
+            &__list {
+                padding-right: 15px;
+                margin-left: 15px;
+                &_active {
+                    margin-left: 0;
+                }
+                li {
+                    font-size: 12px;
+                }
+            }
+            &__back {
+                font-size: 13px;
+            }
+            hr {
+                margin: 14px 0;
+            }
+        }
+    }
+    .reviews {
+        padding-bottom: 40px;
+        &__item{
+            margin-top: 40px;
+            flex-direction: column;
+            align-items: center ;
+        }
+        &__text {
+            margin-left: 0;
+            padding-right: 0;
+            margin-top: 20px;
+            text-align: center;
+        }
+        &__descr {
+            padding: 0 20px;
+        }
+    }
+    .footer {
+        height: 370px;
+        &__info {
+            padding: 20px 0;
+            width: 60%;
+            height: 148px;
+        }
+        &__adr {
+            font-size: 14px;
+            margin-bottom: 15px;
+        }
+        &__phone {
+            font-size: 14px;
+            margin-bottom: 15px;
+        }
+        &__social-item {
+            width: 38px;
+            height: 38px;
+            img {
+                height: 17px;
+            }
+        }
+        iframe {
+            height: 370px;
+        }
+    }
+    .modal {
+        min-height: 355px;
+        padding: 30px;
+        &__subtitle {
+            font-size: 17px;
+        }
+        &__descr {
+            font-size: 12px;
+        }
+        label.error{
+            font-size: 14px;
+        }
+    }
+    
 }
 
 @media (max-width: 576px) {
     .container {
-        max-width: 360px;
+        max-width: 300px;
     }
     .header {
         &__logo {
@@ -168,6 +552,23 @@
             width: 210px;
             height: 37px;
             font-size: 12px;
+        }
+        &_submit {
+            width: 180px;
+            height: 38px;
+            font-size: 11px;
+        }
+        &_mini {
+            width: 95px;
+            height: 30px;
+            font-size: 11px;
+        }
+    }
+    .title {
+        font-size: 18px;
+        &_left {
+            font-size: 18px;
+            line-height: 30px;
         }
     }
     .promo {
@@ -194,13 +595,14 @@
         }
     }
     .advantages {
+        padding: 25px 0;
         &__title {
             font-size: 21px;
         }
         &__item {
             margin: 0 auto;
-            margin-top: 20px;
-            width: 350px;
+            margin-top: 15px;
+            width: 100%;
             img {
                 width: 60px;
             }
@@ -212,6 +614,193 @@
         &__descr {
             margin-top: 10px;
             font-size: 11px;
+        }
+    }
+    .consultation {
+        min-height: 365px;
+        padding: 25px 0;
+        &__descr {
+            display: none;
+        }
+        input.error {
+            margin-bottom: 5px;
+        }
+        label.error{
+            font-size: 12px;
+            margin-bottom: 5px;
+        }
+    }
+    .feed-form {
+        margin-top: 15px;
+        input {
+            width: 260px;
+            height: 43px;
+            font-size: 12px;
+            margin: 5px;
+        }
+        &_mt25 {
+            margin-top: 12px;
+        }
+    }
+    .carousel {
+        &__inner {
+            width: 260px;
+        }
+        .slick-prev, .slick-next {
+            height: 38px;
+            width: 23px;
+            left: -22px;
+        }
+        .slick-next {
+            right: -22px;
+            left: auto;
+        }
+    }
+    .catalog {
+        padding-bottom: 30px;
+        &__tabs {
+            margin-top: 20px;
+        }
+        &__tab {
+            width: 106px;
+            height: 37px;
+            line-height: 37px;
+            font-size: 10px;
+        }
+        &__content {
+            margin-top: 20px;
+        }
+        &-item {
+            padding: 10px;
+            width: 260px;
+            min-height: 295px;
+            &__img {
+                height: 130px;
+            }
+            &__subtitle {
+                margin-top: 5px;
+                font-size: 12px;
+            }
+            &__descr {
+                margin-top: 5px;
+                font-size: 10px;
+                line-height: 17px;
+            }
+            &__link {
+                font-size: 12px;
+            }
+            &__old-price {
+                font-size: 10px;
+            }
+            &__price {
+                font-size: 14px;
+            }
+            hr {
+                margin: 8px 0;
+            }
+            &__footer {
+                justify-content: space-around;
+            }
+            &__wrapper {
+                width: calc(200% + 24px);
+            }
+            &__content {
+                margin-right: 0;
+                &_active {
+                    margin-right: 14px;
+                }
+            }
+            &__list {
+                padding-right: 10px;
+                margin-left: 10px;
+                li {
+                    font-size: 9px;
+                    &::before {
+                        width: 3px;
+                        height: 3px;
+                        top: 5px;
+                    }
+                }
+                &_active {
+                    margin-left: 0;
+                }
+            }
+        }
+    }
+    .reviews {
+        padding-bottom: 20px;
+        &__img {
+            height: 120px;
+            width: 120px;
+        }
+        &__item{
+            margin-top: 25px;
+        }
+        &__text {
+            margin-left: 0;
+            padding-right: 0;
+            margin-top: 10px;
+            text-align: center;
+        }
+        &__subtitle {
+            font-size: 14px;
+        }
+        &__count {
+            font-size: 12px;
+        }
+        &__descr {
+            padding: 0;
+            font-size: 12px;
+        }
+    }
+    .footer {
+        height: 300px;
+        &__info {
+            padding: 10px 0;
+            width: 100%;
+            height: 110px;
+        }
+        &__adr {
+            font-size: 13px;
+            margin-bottom: 7px;
+        }
+        &__phone {
+            font-size: 13px;
+            margin-bottom: 7px;
+        }
+        &__social-item {
+            margin: 0 10px;
+            width: 30px;
+            height: 30px;
+            img {
+                height: 15px;
+            }
+        }
+        iframe {
+            height: 300px;
+        }
+    }
+    .modal {
+        padding: 10px;
+        min-height: 285px;
+        width: 280px;
+        &__subtitle {
+            font-size: 15px;
+        }
+        &__descr {
+            font-size: 10px;
+        }
+        &__close {
+            right: -20px;
+            font-size: 22px;
+            line-height: 15px;
+        }
+        input.error {
+            margin-bottom: 5px;
+        }
+        label.error{
+            font-size: 12px;
+            margin-bottom: 5px;
         }
     }
 }
